Adds contain_config

--- a/example.ipynb
+++ b/example.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "from crow_client import CrowClient"
+    "from crow_client import CrowClient\n",
+    "from crow_client.models import DockerContainerConfiguration"
    ]
   },
   {
@@ -30,6 +31,7 @@
     "    environment=\"crow-test-client.env.DummyEnv\",\n",
     "    requires_aviary_internal=False,\n",
     "    environment_variables={\"SAMPLE_ENV_VAR\": \"sample_val\"},\n",
+    "    container_config=DockerContainerConfiguration(cpu=\"1\", memory=\"2Gi\"),\n",
     "    agent=\"ldp.agent.SimpleAgent\",\n",
     ")"
    ]
